# telegram_sender

./: .dockerignore  .gitignore  docker-compose.yml  pyproject.toml
docs/: README.md  appScheduler.MD  ignition.md
grafana/alloy/: config.alloy
sandbox/: test_config.py  test_datetime.py  test_logger.py
sandbox/strings/: test_strings.py
sandbox/tests_async/: async_1.py  async_planner.py
snippets/fastapi/: main.py
snippets/load_configs/: databases.json  load_conf.py
snippets/loggers/: logger_conf.py
snippets/sqlmodel/: dev_test.py  schemas.py  selecting_data.py  sqlite_pandas.py
snippets/sqlmodel/app/: app.py  schemas.py
snippets/sqlmodel/app/db/: connects.py  init.py
snippets/telegram/: send_test.py
src/: dockerfile.py_telebot  requirements.txt  start.sh
src/app/: config.ini  dates_infos.py  dockerfile.py_telebot  load_config.py  logger.py  logging.yaml  main.py  requiriments.txt  scheduler.py  smn_explore.py  weather.py
src/app/countdowns/: __init__.py  checkers.py  class_schemas.py  funcs.py  rest_control.py
src/app/dev/: dev_datetimes.py
src/app/phrase_otd/: phrase_main.py
src/app/telegram_reporter.egg-info/: PKG-INFO  SOURCES.txt
test/prod_enpoint/: smn_server.py
